--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body> 
+    <button class="batu">Rock</button>
+    <button class="gunting">Scissors</button>
+    <button class="kertas">Paper</button>
 
-
+    <div class="result"></div>
 
     <script src="main.js"></script>
 </body>
