--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body> 
-    <button class="batu">Rock</button>
-    <button class="gunting">Scissors</button>
-    <button class="kertas">Paper</button>
+    <button class="choice" data-choice="rock">Rock</button>
+    <button class="choice" data-choice="scissors">Scissors</button>
+    <button class="choice" data-choice="paper">Paper</button>
 
     <div class="result"></div>
 
